--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 	<style>
 		html body {
 			width:100%;
-			background-color:#111;
+			background-color:black;
 			font-family:Courier;}
 		h1 {	
-			color:#00AA00;
-			margin-left:20%;
+			color:red;
+			margin-left:35%;
 			font-size:30px;}
 		table {
 			width:80%;
 			margin:20px 10% 50px 10%;
 			border:none;
-			color:#999;
+			color:white;
 			font-size:15px;}
 		tr {
 			width:auto;}
 		th {
-			border:1px solid #999;
+			border:3px solid #90EE90;
 			padding:4px 1% 4px 1%;
-			color:white;
+			color:orange;
 			text-align:left;
 			font-size:15px;}
 		td {
-			border:1px solid #999;
+			border:1px solid white;
 			padding:4px 1% 4px 1%;
 			text-align:left;
 			font-size:15px;}
